fix: adjust heading margin in receipt styles to prevent extra spacing

--- a/src/DonationForms/resources/styles/components/_receipt.scss
+++ b/src/DonationForms/resources/styles/components/_receipt.scss
@@ -304,7 +304,6 @@
 
     &-heading, &-heading * {
         position: relative;
-        margin-block-end: 1rem;
         font-size: 1.75rem;
         font-weight: 600;
         line-height: 1.2;
@@ -314,8 +313,12 @@
         > * {
             color: currentColor;
         }
+    }
 
-        &:not(:empty)::after {
+    &-heading {
+        margin-block-end: 1rem;
+
+        &::after {
             position: absolute;
             content: '';
             display: block;
@@ -327,10 +330,6 @@
             inset-block-start: calc(100% + 1.25rem);
             transform: translate(-50%);
         }
-    }
-
-    &-heading:has(*) {
-        margin-block-end: 0;
     }
 
     &-description, &-description * {
